--- a/hugo.toml
+++ b/hugo.toml
@@ -1,4 +1,4 @@
-baseURL = 'layouts/index.html'
+baseURL = ' http://example.com/'
 languageCode = 'en-us'
 title = 'Hugo | Bhavya Babariya'
 theme = 'ga-hugo-theme-master'
